# scara_robotic_arm

./: .gitignore  .python-version  README.md  main.py  pyproject.toml
src/: arm.py  arm_controller.py  consts.py  kinematics.py  mecanum_chassis.py  motor_controller.py  pusher.py  robot.py  simulaiton.py  teleop.py  utils.py
test/: test_arm.py  test_arm_resetter.py  test_dataclasses_json.py  test_dc_motor.py  test_kinematics.ipynb  test_motor_controller.py  test_move_arm_by_gamepad.py  test_move_arm_horizontal.py  test_pwm_dc_motor.py  test_servo.py  test_simulation.py  test_stepper_motor.py  test_webcam.py
web/: comm_helper.py  events.py  gamepad.py  main.py  response_manager.py  teleop.py  video.py
web/robot-control-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
web/robot-control-frontend/src/: events.ts  main.ts  style.css
web/static/: index.html
web/static/assets/: index-BJFsV5ck.js  index-C1OU3F_u.css
