[project]
name = "scara-robotic-arm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "gpiozero>=2.0.1",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "opencv-contrib-python>=4.11.0.86",
    "parse>=1.20.2",
    "pigpio>=1.78",
    "pint>=0.24.4",
    "pygame>=2.6.1",
    "pymunk>=6.11.1",
    "rpi-gpio>=0.7.1",
    "rpi-lgpio>=0.6",
    "ruff>=0.11.10",
    "smbus>=1.1.post2",
    "smbus2>=0.5.0",
    "ticlib>=0.3",
    "uvicorn[standard]>=0.34.1",
]
